--- a/Ana-Dosya/20-Test-Sayfasi/22-Test/index.html
+++ b/Ana-Dosya/20-Test-Sayfasi/22-Test/index.html
@@ -18,7 +18,7 @@
 <main>
   <div class="container">
     <a class="card" href="#">
-      <img alt="Owl" height="150" src="https://od.lk/s/OTFfMzE1MTE0NjZf/1-Youtube.png" width="150" />
+      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
       <h2>Turis 1</h2>
       <p>    </p>
     </a>
@@ -27,7 +27,7 @@
 
   <div class="container">
     <a class="card" href="#">
-      <img alt="Owl" height="150" src="https://od.lk/s/OTFfMzE1MTE0NjZf/1-Youtube.png" width="150" />
+      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
       <h2>Turis 2</h2>
       <p>    </p>
     </a>
@@ -36,7 +36,7 @@
 
   <div class="container">
     <a class="card" href="#">
-      <img alt="Owl" height="150" src="https://od.lk/s/OTFfMzE1MTE0NjZf/1-Youtube.png" width="150" />
+      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
       <h2>Turis 3</h2>
       <p>    </p>
     </a>
@@ -45,14 +45,14 @@
 
   <div class="container">
     <a class="card" href="#">
-      <img alt="Owl" height="150" src="https://od.lk/s/OTFfMzE1MTE0NjZf/1-Youtube.png" width="150" />
+      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
       <h2>Turis 4</h2>
       <p>    </p>
     </a>
  </div> </div><br>
  </div> </div>  <div class="container">
     <a class="card" href="#">
-      <img alt="Owl" height="150" src="https://od.lk/s/OTFfMzE1MTE0NjZf/1-Youtube.png" width="150" />
+      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
       <h2>Turis 5</h2>
       <p>    </p>
     </a>
@@ -61,7 +61,7 @@
 
   <div class="container">
     <a class="card" href="#">
-      <img alt="Owl" height="150" src="https://od.lk/s/OTFfMzE1MTE0NjZf/1-Youtube.png" width="150" />
+      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
       <h2>Turis 6</h2>
       <p>    </p>
     </a>
@@ -69,7 +69,7 @@
 
 <div class="container">
     <a class="card" href="#">
-      <img alt="Owl" height="150" src="https://od.lk/s/OTFfMzE1MTE0NjZf/1-Youtube.png" width="150" />
+      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
       <h2>Turis 7</h2>
       <p>    </p>
     </a>
@@ -78,7 +78,7 @@
 
   <div class="container">
     <a class="card" href="#">
-      <img alt="Owl" height="150" src="https://od.lk/s/OTFfMzE1MTE0NjZf/1-Youtube.png" width="150" />
+      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
       <h2>Turis 8</h2>
       <p>    </p>
     </a>
@@ -86,7 +86,7 @@
 
   <div class="container">
     <a class="card" href="#">
-      <img alt="Owl" height="150" src="https://od.lk/s/OTFfMzE1MTE0NjZf/1-Youtube.png" width="150" />
+      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
       <h2>Turis 9</h2>
       <p>   </p>
     </a>
@@ -95,7 +95,7 @@
 
   <div class="container">
     <a class="card" href="#">
-      <img alt="Owl" height="150" src="https://od.lk/s/OTFfMzE1MTE0NjZf/1-Youtube.png" width="150" />
+      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
       <h2>Turis 10</h2>
       <p>  </p>
     </a>
