--- a/Ana-Dosya/20-Test-Sayfasi/22-Test/index.html
+++ b/Ana-Dosya/20-Test-Sayfasi/22-Test/index.html
@@ -17,7 +17,7 @@
 <!-- partial:index.partial.html -->
 <main>
   <div class="container">
-    <a class="card" href="#">
+    <a class="card" href="https://www.google.be/">
       <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
       <h2>Turis 1</h2>
       <p>    </p>
@@ -26,7 +26,7 @@
 
 
   <div class="container">
-    <a class="card" href="#">
+    <a class="card" href="https://www.google.be/">
       <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
       <h2>Turis 2</h2>
       <p>    </p>
@@ -35,7 +35,7 @@
 
 
   <div class="container">
-    <a class="card" href="#">
+    <a class="card" href="https://www.google.be/">
       <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
       <h2>Turis 3</h2>
       <p>    </p>
@@ -44,14 +44,14 @@
 
 
   <div class="container">
-    <a class="card" href="#">
+    <a class="card" href="https://www.google.be/">
       <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
       <h2>Turis 4</h2>
       <p>    </p>
     </a>
  </div> </div><br>
  </div> </div>  <div class="container">
-    <a class="card" href="#">
+    <a class="card" href="https://www.google.be/">
       <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
       <h2>Turis 5</h2>
       <p>    </p>
@@ -60,7 +60,7 @@
 
 
   <div class="container">
-    <a class="card" href="#">
+    <a class="card" href="https://www.google.be/">
       <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
       <h2>Turis 6</h2>
       <p>    </p>
@@ -68,7 +68,7 @@
  </div> </div>  </div> </div><br> 
 
 <div class="container">
-    <a class="card" href="#">
+    <a class="card" href="https://www.google.be/">
       <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
       <h2>Turis 7</h2>
       <p>    </p>
@@ -77,7 +77,7 @@
 
 
   <div class="container">
-    <a class="card" href="#">
+    <a class="card" href="https://www.google.be/">
       <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
       <h2>Turis 8</h2>
       <p>    </p>
@@ -85,7 +85,7 @@
  </div> </div>  </div> </div><br> 
 
   <div class="container">
-    <a class="card" href="#">
+    <a class="card" href="https://www.google.be/">
       <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
       <h2>Turis 9</h2>
       <p>   </p>
@@ -94,7 +94,7 @@
 
 
   <div class="container">
-    <a class="card" href="#">
+    <a class="card" href="https://www.google.be/">
       <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
       <h2>Turis 10</h2>
       <p>  </p>
