--- a/Ana-Dosya/20-Test-Sayfasi/22-Test/index.html
+++ b/Ana-Dosya/20-Test-Sayfasi/22-Test/index.html
@@ -17,18 +17,18 @@
 <!-- partial:index.partial.html -->
 <main>
   <div class="container">
-    <a class="card" href="https://www.google.be/">
-      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
-      <h2>Turis 1</h2>
+    <a class="card" href="1-Izle/index.html">
+      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2NTVf/ArkaResimYok.png" width="100" />
+      <marquee behavior="scroll" direction="left" scrollamount="5">IPTV IZLE</marquee>
       <p>    </p>
     </a>
 
 
 
   <div class="container">
-    <a class="card" href="https://www.google.be/">
-      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
-      <h2>Turis 2</h2>
+    <a class="card" href="1-Izle/index.html">
+      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2NTVf/ArkaResimYok.png" width="100" />
+      <marquee behavior="scroll" direction="left" scrollamount="5">Turis 2</marquee>
       <p>    </p>
     </a>
  </div> </div><br>
@@ -36,8 +36,8 @@
 
   <div class="container">
     <a class="card" href="https://www.google.be/">
-      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
-      <h2>Turis 3</h2>
+      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2NTVf/ArkaResimYok.png" width="100" />
+      <marquee behavior="scroll" direction="left" scrollamount="5">Turis 3</marquee>
       <p>    </p>
     </a>
 
@@ -45,15 +45,15 @@
 
   <div class="container">
     <a class="card" href="https://www.google.be/">
-      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
-      <h2>Turis 4</h2>
+      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2NTVf/ArkaResimYok.png" width="100" />
+      <marquee behavior="scroll" direction="left" scrollamount="5">Turis 4</marquee>
       <p>    </p>
     </a>
  </div> </div><br>
  </div> </div>  <div class="container">
     <a class="card" href="https://www.google.be/">
-      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
-      <h2>Turis 5</h2>
+      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2NTVf/ArkaResimYok.png" width="100" />
+      <marquee behavior="scroll" direction="left" scrollamount="5">Turis 5</marquee>
       <p>    </p>
     </a>
 
@@ -61,16 +61,16 @@
 
   <div class="container">
     <a class="card" href="https://www.google.be/">
-      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
-      <h2>Turis 6</h2>
+      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2NTVf/ArkaResimYok.png" width="100" />
+      <marquee behavior="scroll" direction="left" scrollamount="5">Turis 6</marquee>
       <p>    </p>
     </a>
  </div> </div>  </div> </div><br> 
 
 <div class="container">
     <a class="card" href="https://www.google.be/">
-      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
-      <h2>Turis 7</h2>
+      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2NTVf/ArkaResimYok.png" width="100" />
+      <marquee behavior="scroll" direction="left" scrollamount="5">Turis 7</marquee>
       <p>    </p>
     </a>
 
@@ -78,16 +78,16 @@
 
   <div class="container">
     <a class="card" href="https://www.google.be/">
-      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
-      <h2>Turis 8</h2>
+      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2NTVf/ArkaResimYok.png" width="100" />
+      <marquee behavior="scroll" direction="left" scrollamount="5">Turis 8</marquee>
       <p>    </p>
     </a>
  </div> </div>  </div> </div><br> 
 
   <div class="container">
     <a class="card" href="https://www.google.be/">
-      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
-      <h2>Turis 9</h2>
+      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2NTVf/ArkaResimYok.png" width="100" />
+      <marquee behavior="scroll" direction="left" scrollamount="5">Turis 9</marquee>
       <p>   </p>
     </a>
 
@@ -95,8 +95,8 @@
 
   <div class="container">
     <a class="card" href="https://www.google.be/">
-      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2Nzdf/1arkayok.png" width="100" />
-      <h2>Turis 10</h2>
+      <img alt="Turis Tv" height="100" src="https://od.lk/s/OTFfMjg1Mzk2NTVf/ArkaResimYok.png" width="100" />
+      <marquee behavior="scroll" direction="left" scrollamount="5">Turis 10</marquee>
       <p>  </p>
     </a>
 
