--- a/Ana-Dosya/20-Test-Sayfasi/23-Test/index.html
+++ b/Ana-Dosya/20-Test-Sayfasi/23-Test/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" class="<head> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script> <link href="https://fonts.googleapis.co">
+<html lang="en" class="<head> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
+<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script> <link href="https://fonts.googleapis.co">
 <head>
   <meta charset="UTF-8">
   <title>CodePen - A Pen by zernadji fethidz</title>
@@ -129,6 +130,23 @@ body {
   font-family: "Lato", sans-serif;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .sidenav {
   height: 100%;
   width: 0;
@@ -136,7 +154,7 @@ body {
   z-index: 1;
   top: 0;
   right: 0;
-  background-color: #5F11BC;
+  background-color: #5a00fe;
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
@@ -162,7 +180,7 @@ body {
   position: absolute;
   top: 0;
     right: 0;
-  font-size: 20px;
+  font-size: 15px;
   margin-left: 0px;
 }
 
@@ -269,27 +287,27 @@ body {
 
 <!--- Uygulama bölümleri--->
 
-<a href="go:sport1" ><img src="https://h.top4top.io/p_2708ifex11.png" >
+<a href="go:sport1" ><img src="https://od.lk/s/OTFfMjg1Mzk2NTVf/ArkaResimYok.png" >
 <CENTER><p> bein sport HD </p></CENTER>
 </a>
 
-<a href="go:sport2" ><img src="https://h.top4top.io/p_2708ifex11.png" >
+<a href="go:sport2" ><img src="https://od.lk/s/OTFfMjg1Mzk2NTVf/ArkaResimYok.png" >
 <CENTER><p> bein sport SD </p></CENTER>
 </a>
 
-<a href="go:sport3" ><img src="https://h.top4top.io/p_2708ifex11.png" >
+<a href="go:sport3" ><img src="https://od.lk/s/OTFfMjg1Mzk2NTVf/ArkaResimYok.png" >
 <CENTER><p> Bein sport LOW </p></CENTER>
 </a>
 
-<a href="go:sport4" ><img src="https://h.top4top.io/p_2708ifex11.png" >
+<a href="go:sport4" ><img src="https://od.lk/s/OTFfMjg1Mzk2NTVf/ArkaResimYok.png" >
 <CENTER><p> yakın</p></CENTER>
 </a>
 
-<a href="go:sport5" ><img src="https://h.top4top.io/p_2708ifex11.png" >
+<a href="go:sport5" ><img src="https://od.lk/s/OTFfMjg1Mzk2NTVf/ArkaResimYok.png" >
 <CENTER><p> yakın</p></CENTER>
 </a>
 
-<a href="go:sport6" ><img src="https://h.top4top.io/p_2708ifex11.png" >
+<a href="go:sport6" ><img src="https://od.lk/s/OTFfMjg1Mzk2NTVf/ArkaResimYok.png" >
 <CENTER><p> yakın </p></CENTER>
 </a> 
 
