--- a/Ana-Dosya/20-Test-Sayfasi/Test-Menu.html
+++ b/Ana-Dosya/20-Test-Sayfasi/Test-Menu.html
@@ -291,104 +291,104 @@ background-image: -webkit-linear-gradient(top, #bc1115 100%, #000 100%);
 <!--- Application sections --->
 <button onclick="window.open('1-Menu-Test/index.html')">
 <img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
-<h2>1-Test</h2>
+<marquee behavior="scroll" direction="left" scrollamount="5">1-Test</marquee>
 </button>
 
 <button onclick="window.open('2-Test-Page/index.htm')">
 <img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
-<h2>2-Test</h2>
+<marquee behavior="scroll" direction="left" scrollamount="5">2-Test</marquee>
 </button>
 
 <button onclick="window.open('3-Acilan/index.html')">
 <img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
-<h2>3-Acilan</h2>
+<marquee behavior="scroll" direction="left" scrollamount="5">3-Acilan</marquee>
 </button>
 
 <button onclick="window.open('4-Player-Menu/index.html')">
 <img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
-<h2>4-Player-Menu</h2>
+<marquee behavior="scroll" direction="left" scrollamount="5">4-Player-Menu</marquee>
 </button>
 
 <button onclick="window.open('5-Player-Menu/index.html')">
 <img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
-<h2>5-Player-Menu</h2>
+<marquee behavior="scroll" direction="left" scrollamount="5">5-Player-Menu</marquee>
 </button>
 
 <button onclick="window.open('6-Plauer/index.html')">
 <img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
-<h2>6-Player-Menu</h2>
+<marquee behavior="scroll" direction="left" scrollamount="5">6-Player-Menu</marquee>
 </button>
 
 <button onclick="window.open('7-Player/index.html')">
 <img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
-<h2>7-Player-Menu</h2>
+<marquee behavior="scroll" direction="left" scrollamount="5">7-Player-Menu</marquee>
 </button>
 
 <button onclick="window.open('8-Yt-Player/index.html')">
 <img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
-<h2>8-Yt-Player</h2>
+<marquee behavior="scroll" direction="left" scrollamount="5">8-Yt-Player</marquee>
 </button>
 
 
 
 <button onclick="window.open('10.00_Test_Iptv/acilan.html')">
 <img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
-<h2>10-Test</h2>
+<marquee behavior="scroll" direction="left" scrollamount="5">10-Test</marquee>
 </button>
 
 <button onclick="window.open('11.Test-m3u8/index.html')">
 <img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
-<h2>11-Test</h2>
+<marquee behavior="scroll" direction="left" scrollamount="5">11-Test</marquee>
 </button>
 
 <button onclick="window.open('12-Test/index.html')">
 <img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
-<h2>12-Test</h2>
+<marquee behavior="scroll" direction="left" scrollamount="5">12-Test</marquee>
 </button>
 
 
 <button onclick="window.open('15-Test-Player/index.html')">
 <img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
-<h2>15-Test-Player</h2>
+<marquee behavior="scroll" direction="left" scrollamount="5">15-Test-Player</marquee>
 </button>
 
 <button onclick="window.open('16-Player/index.html')">
 <img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
-<h2>16-Player</h2>
+<marquee behavior="scroll" direction="left" scrollamount="5">16-Player</marquee>
 </button>
 
 <button onclick="window.open('18-Test/index.html')">
 <img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
-<h2>18-Player</h2>
+<marquee behavior="scroll" direction="left" scrollamount="5">18-Player</marquee>
 </button>
 
 
 <button onclick="window.open('19-Test/index.html')">
 <img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
-<h2>19-Test</h2>
+<marquee behavior="scroll" direction="left" scrollamount="5">19-Test</marquee>
 </button>
 
 
 <button onclick="window.open('20-Test-Vlc/index.html')">
 <img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
-<h2>20-Test-Vlc</h2>
+<marquee behavior="scroll" direction="left" scrollamount="5">20-Test-Vlc</marquee>
 </button>
 
 
 <button onclick="window.open('22-Test/index.html')">
 <img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
-<h2>22-Test</h2>
+<marquee behavior="scroll" direction="left" scrollamount="5">22-Test</marquee>
 </button>
 
 <button onclick="window.open('23-Test/index.html')">
 <img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
-<h2>23-Test</h2>
+<marquee behavior="scroll" direction="left" scrollamount="5">23-Test</marquee>
 </button>
 
 
 <button onclick="window.open('http://action_exit')">
 <img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
-<h2>Exit</h2>
+<marquee behavior="scroll" direction="left" scrollamount="5">Exit</marquee>
 </button>
 
 </div>
