--- a/Ana-Dosya/20-Test-Sayfasi/20-Test-Vlc/index.html
+++ b/Ana-Dosya/20-Test-Sayfasi/20-Test-Vlc/index.html
@@ -144,11 +144,11 @@
 
 
 
-            <button class="channel-button" data-url="116.202.238.88/TRT1_TR/index.m3u8">🇹🇷 TRT 1<h6>Gec Aciliyor<h6></button>
-            <button class="channel-button" data-url="tgn.bozztv.com/dvrfl05/gin-trt1eu/tracks-v1a1/mono.m3u8">TRT 1</button>
+            <button class="channel-button" data-url="116.202.238.88/TRT1_TR/index.m3u8"><marquee behavior="scroll" direction="left" scrollamount="5">TRT 1</marquee>
+            <button class="channel-button" data-url="tgn.bozztv.com/dvrfl05/gin-trt1eu/tracks-v1a1/mono.m3u8"><marquee behavior="scroll" direction="left" scrollamount="5">TRT 1</marquee>
 <div>
-            <button class="channel-button" data-url="tgn.bozztv.com/trn03/gt-atv-tv/tracks-v1a1/mono.m3u8">🇹🇷 ATV</button>
-            <button class="channel-button" data-url="tgn.bozztv.com/dvrfl05/gin-atvavrupa/tracks-v1a1/mono.m3u8">🇹🇷 ATV Avrupa</button>
+            <button class="channel-button" data-url="tgn.bozztv.com/trn03/gt-atv-tv/tracks-v1a1/mono.m3u8"><marquee behavior="scroll" direction="left" scrollamount="5">🇹🇷 ATV</marquee>
+            <button class="channel-button" data-url="tgn.bozztv.com/dvrfl05/gin-atvavrupa/tracks-v1a1/mono.m3u8"><marquee behavior="scroll" direction="left" scrollamount="5">🇹🇷 ATV Avrupa</marquee>
 <div>
             <button class="channel-button" data-url="ciner.daioncdn.net/showtv/showtv_1080p.m3u8?ex=1664766175&st=RBzhSuGauna0OGld-DJUVA&tv=1&sid=5c5vr8y2q331&app=4bc856ef-4c68-4a94-bc87-37dfaaa66558&ce=3&e=1664766175">🇹🇷 SHOW TV</button>
             <button class="channel-button" data-url="edge1.socialsmart.tv/turkhaber/bant1/playlist.m3u8">🇹🇷 Türk Haber</button>
