--- a/Ana-Dosya/20-Test-Sayfasi/20-Test-Vlc/index.html
+++ b/Ana-Dosya/20-Test-Sayfasi/20-Test-Vlc/index.html
@@ -150,13 +150,13 @@
             <button class="channel-button" data-url="tgn.bozztv.com/trn03/gt-atv-tv/tracks-v1a1/mono.m3u8"><marquee behavior="scroll" direction="left" scrollamount="5">🇹🇷 ATV</marquee>
             <button class="channel-button" data-url="tgn.bozztv.com/dvrfl05/gin-atvavrupa/tracks-v1a1/mono.m3u8"><marquee behavior="scroll" direction="left" scrollamount="5">🇹🇷 ATV Avrupa</marquee>
 <div>
-            <button class="channel-button" data-url="ciner.daioncdn.net/showtv/showtv_1080p.m3u8?ex=1664766175&st=RBzhSuGauna0OGld-DJUVA&tv=1&sid=5c5vr8y2q331&app=4bc856ef-4c68-4a94-bc87-37dfaaa66558&ce=3&e=1664766175">🇹🇷 SHOW TV</button>
-            <button class="channel-button" data-url="edge1.socialsmart.tv/turkhaber/bant1/playlist.m3u8">🇹🇷 Türk Haber</button>
+            <button class="channel-button" data-url="ciner.daioncdn.net/showtv/showtv_1080p.m3u8?ex=1664766175&st=RBzhSuGauna0OGld-DJUVA&tv=1&sid=5c5vr8y2q331&app=4bc856ef-4c68-4a94-bc87-37dfaaa66558&ce=3&e=1664766175"><marquee behavior="scroll" direction="left" scrollamount="5">🇹🇷 SHOW TV</marquee>
+            <button class="channel-button" data-url="edge1.socialsmart.tv/turkhaber/bant1/playlist.m3u8"><marquee behavior="scroll" direction="left" scrollamount="5">🇹🇷 Türk Haber</marquee>
 <div>
-            <button class="channel-button" data-url="demiroren-live.daioncdn.net/kanald/kanald_720p.m3u8">🇹🇷  KANAL D</button>
-            <button class="channel-button" data-url="live.duhnet.tv/S2/HLS_LIVE/eurodnp/track_3_750/playlist.m3u8">🇹🇷  Euro D</button>
+            <button class="channel-button" data-url="demiroren-live.daioncdn.net/kanald/kanald_720p.m3u8"><marquee behavior="scroll" direction="left" scrollamount="5">🇹🇷  KANAL D</marquee>
+            <button class="channel-button" data-url="live.duhnet.tv/S2/HLS_LIVE/eurodnp/track_3_750/playlist.m3u8"><marquee behavior="scroll" direction="left" scrollamount="5">🇹🇷  Euro D</marquee>
 <div>
-            <button class="channel-button" data-url="trn03.tulix.tv/gt-dmax/index.m3u8">🇹🇷  D MAX</button>
+            <button class="channel-button" data-url="trn03.tulix.tv/gt-dmax/index.m3u8"><marquee behavior="scroll" direction="left" scrollamount="5">🇹🇷  D MAX</marquee>
             <button class="channel-button" data-url="tgn.bozztv.com/trn03/gt-foxturktv/tracks-v1a1/mono.m3u8">🇹🇷  NOW TV HD</button>
 <div>
             <button class="channel-button" data-url="50.7.144.122:1935/livetv/foxtv.stream/sec-f5-v1-a1.m3u8">🇹🇷  NOw TV-2</button>
