--- a/Ana-Dosya/20-Test-Sayfasi/Test-Menu.html
+++ b/Ana-Dosya/20-Test-Sayfasi/Test-Menu.html
@@ -385,6 +385,27 @@ background-image: -webkit-linear-gradient(top, #bc1115 100%, #000 100%);
 <marquee behavior="scroll" direction="left" scrollamount="5">23-Test</marquee>
 </button>
 
+<button onclick="window.open('26-Test/index.html')">
+<img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
+<marquee behavior="scroll" direction="left" scrollamount="5">26-Test</marquee>
+</button>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <button onclick="window.open('http://action_exit')">
 <img src="https://od.lk/s/OTFfMjkxMTE0NDBf/VlP3Vv%20%283%29.png" style="border-radius: 8px;" height="80px" width="80px" vspace="5px" />
