--- a/index.html
+++ b/index.html
@@ -1,45 +1,33 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
-
-
-
-    <head>
-        <meta http-equiv="refresh" content="5;url=Ana-Dosya/Menu.html" />
-    </head>
-
-
-
-
   <meta charset="UTF-8">
-  <title>Turis Mulayim</title>
-  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:300,500" rel="stylesheet">
-<meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'><link rel="stylesheet" href="./style.css">
+  <title>Loading</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+<link rel="stylesheet" href="./style.css">
 
 </head>
-<body>
 
+    <head>
+        <meta http-equiv="refresh" content="6;url=0-Ana-Sayfa/index.html" />
+    </head>
+
+<body>
 <!-- partial:index.partial.html -->
-<div class="controls"><!--
-  --><label><!--
-    --><input id="gauges" type="checkbox"><!--
-    --><!--
-  --></label><!--
-  --><label><!--
-    --><input id="night" type="checkbox"><!--
-    --><!--
-  --></label><!--
---></div>
-<div class="container"><!----></div>
-<div class="help hidden"><!--
-  --><p><!--
-    -->5 Saniye Sonra Bağlanıyorsunuz  &nbsp      Mülayim-Turis<!--
-  --></p><!--
---></div>
-<div class="day hide"></div><div class="night hide"></div>
+<div class="loading-page">
+  <div class="counter">
+    <p>Turis Tv</p>
+    <h1>0%
+      <!--
+      h1.abs loading
+      h1.abs.color loading
+      -->
+    </h1>
+    <hr/>
+  </div>
+</div>
 <!-- partial -->
-  <script  src="./script.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script><script  src="./script.js"></script>
 
 </body>
 </html>
