--- a/0-Ana-Sayfa/index.html
+++ b/0-Ana-Sayfa/index.html
@@ -223,6 +223,7 @@ body {
 <a href="https://www.youtube.com/watch?v=1ogi5ygIuv0">Youtube</a>
 <a href="../0-Ana-Menu/10-Test/100-Test-Yeri/index.html">Testler</a>
 <a href="../0-Ana-Menu/21-Turis-Program/index.html">Turis Program</a>
+<a href="../Test/index.html">Test</a>
  
 <br><br>
 <a href="http://action_exit">Çıkış Yap</a>
