--- a/Test/index.html
+++ b/Test/index.html
@@ -17,86 +17,86 @@
 <!-- partial:index.partial.html -->
 <main>
   <div class="container">
-    <a class="card" href="../1-Iptv/1-Izle/IptvMenu.html">
-      <img alt="Turis Tv" height="80" src="https://od.lk/s/NzJfNDYwMjkwMDBf/%2B18-removebg-preview-removebg-preview.png" width="80" />
-      <marquee behavior="scroll" direction="left" scrollamount="5">1-IPTV IZLE 🎧</marquee>
+    <a class="card" href="https://www.youtube.com/watch?v=3yjO6yfHLcU">
+      <img alt="Turis Tv" height="70" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRiAaVdyJ79qXDCB9v7LYLYlsh-afTsyLYnSw&s" width="80" />
+      <marquee behavior="scroll" direction="left" scrollamount="3">1-Diriliş Ertuğrul </marquee>
       <p>    </p>
     </a>
 
 
 
   <div class="container">
-    <a class="card" href="../1-Iptv/2-Izle/IptvMenu.html">
-      <img alt="Turis Tv" height="80" src="https://od.lk/s/NzJfNDYwMjkwMDBf/%2B18-removebg-preview-removebg-preview.png" width="80" />
-      <marquee behavior="scroll" direction="left" scrollamount="5">2-IPTV IZLE 🎧 </marquee>
+    <a class="card" href="https://www.youtube.com/watch?v=aHj-PkwU4ps">
+      <img alt="Turis Tv" height="70" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRiAaVdyJ79qXDCB9v7LYLYlsh-afTsyLYnSw&s" width="80" />
+      <marquee behavior="scroll" direction="left" scrollamount="3">2-Diriliş Ertuğrul </marquee>
       <p>    </p>
     </a>
  </div> </div><br>
 
 
   <div class="container">
-    <a class="card" href="https://www.google.be/">
-      <img alt="Turis Tv" height="80" src="https://od.lk/s/NzJfNDYwMjg5OTZf/MUZIK-removebg-preview.png" width="80" />
-      <marquee behavior="scroll" direction="left" scrollamount="5">Turis 3 🎧 </marquee>
+    <a class="card" href="https://www.youtube.com/watch?v=7rlde3OSlKY">
+      <img alt="Turis Tv" height="80" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRiAaVdyJ79qXDCB9v7LYLYlsh-afTsyLYnSw&s" width="80" />
+      <marquee behavior="scroll" direction="left" scrollamount="3">3-Diriliş Ertuğrul </marquee>
       <p>    </p>
     </a>
 
 
 
   <div class="container">
-    <a class="card" href="https://www.google.be/">
-      <img alt="Turis Tv" height="80" src="https://od.lk/s/OTFfMjg1Mzk2NTVf/ArkaResimYok.png" width="80" />
-      <marquee behavior="scroll" direction="left" scrollamount="5">Turis 4 🎧 </marquee>
+    <a class="card" href="https://www.youtube.com/watch?v=DMRZxUi_7Nw">
+      <img alt="Turis Tv" height="80" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRiAaVdyJ79qXDCB9v7LYLYlsh-afTsyLYnSw&s" width="80" />
+      <marquee behavior="scroll" direction="left" scrollamount="3">4-Diriliş Ertuğrul </marquee>
       <p>    </p>
     </a>
  </div> </div><br>
  </div> </div>  <div class="container">
-    <a class="card" href="https://www.google.be/">
-      <img alt="Turis Tv" height="80" src="https://od.lk/s/OTFfMjg1Mzk2NTVf/ArkaResimYok.png" width="80" />
-      <marquee behavior="scroll" direction="left" scrollamount="5">Turis 5 🎧 </marquee>
+    <a class="card" href="https://www.youtube.com/watch?v=Pt3wZN6fusQ">
+      <img alt="Turis Tv" height="80" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRiAaVdyJ79qXDCB9v7LYLYlsh-afTsyLYnSw&s" width="80" />
+      <marquee behavior="scroll" direction="left" scrollamount="3">5-Diriliş Ertuğrul </marquee>
       <p>    </p>
     </a>
 
 
 
   <div class="container">
-    <a class="card" href="https://www.google.be/">
-      <img alt="Turis Tv" height="80" src="https://od.lk/s/OTFfMjg1Mzk2NTVf/ArkaResimYok.png" width="80" />
-      <marquee behavior="scroll" direction="left" scrollamount="5">Turis 6 🎧 </marquee>
+    <a class="card" href="https://www.youtube.com/watch?v=5uVh7uxoAxM">
+      <img alt="Turis Tv" height="80" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRiAaVdyJ79qXDCB9v7LYLYlsh-afTsyLYnSw&s" width="80" />
+      <marquee behavior="scroll" direction="left" scrollamount="3">6-Diriliş Ertuğrul </marquee>
       <p>    </p>
     </a>
  </div> </div>  </div> </div><br> 
 
 <div class="container">
-    <a class="card" href="https://www.google.be/">
-      <img alt="Turis Tv" height="80" src="https://od.lk/s/OTFfMjg1Mzk2NTVf/ArkaResimYok.png" width="80" />
-      <marquee behavior="scroll" direction="left" scrollamount="5">Turis 7 🎧 </marquee>
+    <a class="card" href="https://www.youtube.com/watch?v=Hk8SQekt8dw&t=1205s">
+      <img alt="Turis Tv" height="80" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRiAaVdyJ79qXDCB9v7LYLYlsh-afTsyLYnSw&s" width="80" />
+      <marquee behavior="scroll" direction="left" scrollamount="3">7-Diriliş Ertuğrul </marquee>
       <p>    </p>
     </a>
 
 
 
   <div class="container">
-    <a class="card" href="https://www.google.be/">
-      <img alt="Turis Tv" height="80" src="https://od.lk/s/OTFfMjg1Mzk2NTVf/ArkaResimYok.png" width="80" />
-      <marquee behavior="scroll" direction="left" scrollamount="5">Turis 8 🎧 </marquee>
+    <a class="card" href="https://www.youtube-nocookie.com/embed/-5eb7ON6IiQ?playlist=-5eb7ON6IiQ&autoplay=1&iv_load_policy=3&loop=1&start=">
+      <img alt="Turis Tv" height="80" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRiAaVdyJ79qXDCB9v7LYLYlsh-afTsyLYnSw&s" width="80" />
+      <marquee behavior="scroll" direction="left" scrollamount="3">8-Diriliş Ertuğrul </marquee>
       <p>    </p>
     </a>
  </div> </div>  </div> </div><br> 
 
   <div class="container">
-    <a class="card" href="https://www.google.be/">
-      <img alt="Turis Tv" height="80" src="https://od.lk/s/OTFfMjg1Mzk2NTVf/ArkaResimYok.png" width="80" />
-      <marquee behavior="scroll" direction="left" scrollamount="5">Turis 9 🎧 </marquee>
+    <a class="card" href="https://www.youtube-nocookie.com/embed/vVrzxFPMi3g?playlist=vVrzxFPMi3g&autoplay=1&iv_load_policy=3&loop=1&start=">
+      <img alt="Turis Tv" height="80" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRiAaVdyJ79qXDCB9v7LYLYlsh-afTsyLYnSw&s" width="80" />
+      <marquee behavior="scroll" direction="left" scrollamount="3">9-Diriliş Ertuğrul </marquee>
       <p>   </p>
     </a>
 
 
 
   <div class="container">
-    <a class="card" href="https://www.google.be/">
-      <img alt="Turis Tv" height="80" src="https://od.lk/s/OTFfMjg1Mzk2NTVf/ArkaResimYok.png" width="80" />
-      <marquee behavior="scroll" direction="left" scrollamount="5">Turis 10 🎧 </marquee>
+    <a class="card" href="https://www.youtube-nocookie.com/embed/nvRqtW9AiIE?playlist=nvRqtW9AiIE&autoplay=1&iv_load_policy=3&loop=1&start=">
+      <img alt="Turis Tv" height="80" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRiAaVdyJ79qXDCB9v7LYLYlsh-afTsyLYnSw&s" width="80" />
+      <marquee behavior="scroll" direction="left" scrollamount="3">10-Diriliş Ertuğrul </marquee>
       <p>  </p>
     </a>
 
